InstallGStreamerResources returns wrong result
From #1233 (closed)
gnome-software-40.0-2.fc34.x86_64
PackageKit-1.2.3-1.fc34.x86_64
Reproducer:
- start a normal session
- if necessary, install
gstreamer1-plugin-openh264
and restart the session - make sure that gnome-software is started in the background
- run
sudo rpm -e gstreamer1-plugin-openh264-1.18.2-1.fc34.x86_64
- launch
totem foo.mp4
- gnome-software will start, show a list of possible packages to install
- clicking on the
Install
button for the openh264 package will fail
An instrumented version of the PackageKit client shows that gnome-software returns no errors, so that totem will start playing (in the background, but that's another matter) as if the new codec was successfully installed.