gs-plugin-loader: Add option to propagate error to the caller

This is required on installation of the apps, when they are invoked
through D-Bus and the caller is awaiting a response. Without it
the plugin loaded hides the real error and the callers receives
success, even if the install failed or had been cancelled.

Closes https://gitlab.gnome.org/GNOME/gnome-software/-/issues/1235