lib/gs-plugin-job.h
@@ -28,6 +28,8 @@ void		 gs_plugin_job_set_dedupe_flags		(GsPluginJob	*self,
 							 GsAppListFilterFlags dedupe_flags);
 void		 gs_plugin_job_set_interactive		(GsPluginJob	*self,
 							 gboolean	 interactive);
+void		 gs_plugin_job_set_propagate_error	(GsPluginJob	*self,
+							 gboolean	 propagate_error);
 void		 gs_plugin_job_set_max_results		(GsPluginJob	*self,
 							 guint		 max_results);
 void		 gs_plugin_job_set_timeout		(GsPluginJob	*self,
