src/gs-page.c
@@ -50,6 +50,7 @@ typedef struct {
 	GtkWidget	*button_install;
 	GsPluginAction	 action;
 	GsShellInteraction interaction;
+	gboolean	 propagate_error;
 } GsPageHelper;
 
 static void
@@ -137,16 +138,29 @@ gs_page_app_installed_cb (GObject *source,
 
 	gs_application_emit_install_resources_done (GS_APPLICATION (g_application_get_default ()), NULL, error);
 
-	if (g_error_matches (error,
-			     GS_PLUGIN_ERROR,
-			     GS_PLUGIN_ERROR_CANCELLED)) {
-		g_debug ("%s", error->message);
+	if (g_error_matches (error, GS_PLUGIN_ERROR, GS_PLUGIN_ERROR_CANCELLED) ||
+	    g_error_matches (error, G_IO_ERROR, G_IO_ERROR_CANCELLED)) {
+		g_debug ("App install cancelled with error: %s", error->message);
 		return;
 	}
 	if (!ret) {
-		g_warning ("failed to install %s: %s",
-		           gs_app_get_id (helper->app),
-		           error->message);
+		if (helper->propagate_error) {
+			g_autoptr(GsPluginEvent) event = NULL;
+
+			/* create event which is handled by the GsShell */
+			event = gs_plugin_event_new ();
+			gs_plugin_event_set_error (event, error);
+			gs_plugin_event_set_action (event, helper->action);
+			gs_plugin_event_set_app (event, helper->app);
+			if (helper->interaction == GS_SHELL_INTERACTION_FULL)
+				gs_plugin_event_add_flag (event, GS_PLUGIN_EVENT_FLAG_INTERACTIVE);
+			gs_plugin_event_add_flag (event, GS_PLUGIN_EVENT_FLAG_WARNING);
+
+			/* add event to queue */
+			gs_plugin_loader_add_event (plugin_loader, event);
+		} else {
+			g_warning ("failed to install %s: %s", gs_app_get_id (helper->app), error->message);
+		}
 		return;
 	}
 
@@ -273,9 +287,11 @@ gs_page_install_app (GsPage *page,
 	helper->page = g_object_ref (page);
 	helper->cancellable = g_object_ref (cancellable);
 	helper->interaction = interaction;
+	helper->propagate_error = TRUE;
 
 	plugin_job = gs_plugin_job_newv (helper->action,
 					 "interactive", (interaction == GS_SHELL_INTERACTION_FULL),
+					 "propagate-error", helper->propagate_error,
 					 "app", helper->app,
 					 NULL);
 	gs_plugin_loader_job_process_async (priv->plugin_loader,
